--- a/src/app/shared/tarjeta-tarea/tarjeta-tarea.component.html
+++ b/src/app/shared/tarjeta-tarea/tarjeta-tarea.component.html
@@ -1,4 +1,4 @@
 <div class="tarjeta-tarea">
   <h3>{{ titulo }}</h3>
-  <p>Asignada a: {{ asignadoA }}</p>
+  <p>Asignada a: {{ asignadoNombre }}</p>
 </div>
