--- a/src/app/core/hogar/dialog-crear-hogar.html
+++ b/src/app/core/hogar/dialog-crear-hogar.html
@@ -10,8 +10,10 @@
     </mat-form-field>
 
     <div mat-dialog-actions>
-      <button mat-button (click)="cancelar()">Cancelar</button>
-      <button mat-flat-button color="primary" [disabled]="f.invalid">Crear</button>
+      <button mat-button type="button" (click)="cancelar()">Cancelar</button>
+      <button mat-flat-button type="submit" color="primary" [disabled]="f.invalid">
+        Crear
+      </button>
     </div>
   </form>
 </div>
