Estructura de carpetas en core y tests

--- a/src/app/core/hogar/component/dialog-crear-hogar.scss
+++ b/src/app/core/hogar/component/dialog-crear-hogar.scss
@@ -1,4 +1,4 @@
-@use 'app/shared/styles/dialog-base' as base;
+@use '../../../shared/styles/dialog-base' as base;
 
 .dialog-container {
   @include base.dialog-base;
