feat: historial de tareas, bloqueo por valoraciones y finalización con feedback

--- a/src/app/core/tareas/component/tareas/lista-tareas.component.html
+++ b/src/app/core/tareas/component/tareas/lista-tareas.component.html
@@ -1,3 +1,9 @@
+<ng-container *ngIf="(tareasParaValorar$ | async)?.length as pendientes">
+  <div *ngIf="pendientes > 0" class="aviso-valoracion">
+    🔔 Tienes {{ pendientes }} tarea{{ pendientes > 1 ? 's' : '' }} pendiente{{ pendientes > 1 ? 's' : '' }} de valorar
+  </div>
+</ng-container>
+
 <div class="contenedor-tareas">
   <div class="grid-tareas">
     <ng-container *ngIf="(tareas$ | async) as tareas">
